# Rustify

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rustify-ci.yml
src/: categories.rs  main.rs  organizer.rs
